switched header from class to id

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
     </head>
     <body>
-        <div class="header">
+        <div id="header">
             <div id="logo">
                 <a href="/"><img src="/img/appleseed-logo.png" alt="appleseed logo"></a>
             </div>
