prototyped home page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>appleseed</title>
+        <title>{{ page.title }}</title>
         <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
     </head>
@@ -22,3 +22,4 @@
                 </ul>
             </div>
         </div>
+        <div id="wrapper">
