--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,33 @@
         </div>
+        <p class="clear"></p>
+        <div id="footer-container">
+            <div id="footer-inner">
+                <div class="footer" id="contact">
+                    <h4>Contact</h4>
+                    <ul>
+                        <li><a href="mailto:hello@appleseedhq.net">hello@appleseedhq.net</a></li>
+                        <li><a href="https://groups.google.com/forum/#!forum/appleseed-dev">mailing list</a></li>
+                    </ul>
+                    <div id="social">
+                        <ul>
+                            <li><a href="https://github.com/appleseedhq"><i class="fa fa-github fa-lg"></i></a></li>
+                            <li><a href="https://vimeo.com/appleseedhq"><i class="fa fa-vimeo-square fa-lg"></i></a></li>
+                            <li><a href="https://twitter.com/appleseedhq"><i class="fa fa-twitter-square fa-lg"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer" id="links">
+                    <h4>Links</h4>
+                    <ul>
+                        <li><a href="http://www.mayaseed.net">mayaseed.net</a></li>
+                        <li><a href="http://www.jupiter-jazz.com">jupiter-jazz.com</a></li>
+                    </ul>
+                </div>
+                <div class="footer" id="copyright">
+                    <h4>Copyright</h4>
+                    appleseed is released as open source under the MIT license. read more here.
+                </div>
+            </div>
+        </div>
     </body>
 </html>
