--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
     </head>
     <body>
