changed the copyright, added link to Wikipedia

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="footer" id="copyright">
                     <h4>Copyright</h4>
-                    appleseed is released as open source under the MIT license. read more here.
+                    appleseed is released under the permissive MIT license. <a href="http://en.wikipedia.org/wiki/MIT_License">Read more on Wikipedia</a>.
                 </div>
             </div>
         </div>
