added missing pages, posts, modified menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,12 +14,10 @@
             </div>
             <div id="navigation">
                 <ul>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">download</a></li>
-                    <li><a href="#">news</a></li>
-                    <li><a href="#">docs</a></li>
-                    <li><a href="#">gallery</a></li>
-                    <li><a href="#">development</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="download.html">download</a></li>
+                    <li><a href="news.html">news</a></li>
+                    <li><a href="https://github.com/appleseedhq/appleseed">github</a></li>
                 </ul>
             </div>
         </div>
