--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@
         if (navigator.appVersion.indexOf("Win")!=-1)
         {
             link = 'https://drive.google.com/file/d/0B5JRj3LWTYIRcW5mTlF4QUZRMm8/edit';
-            target = 'for Win 32';
+            target = 'for Windows';
         }
         else if (navigator.appVersion.indexOf("Mac")!=-1)
         {
