fixed closing script tag

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,5 +47,5 @@
 
         document.getElementById('download-link').href = link;
         document.getElementById('download-platform').innerHTML = target;
-    </script
+    </script>
 {% include footer.html %}
