--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,16 @@ article {
     margin-bottom: 35px;
 }
 
+hr {
+    margin-bottom: 30px;
+    border: 0;
+    height: 1px;
+    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(255,255,255,0.35), rgba(0,0,0,0));
+    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(255,255,255,0.35), rgba(0,0,0,0));
+    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(255,255,255,0.35), rgba(0,0,0,0));
+    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(255,255,255,0.35), rgba(0,0,0,0));
+}
+
 .post-date {
     margin-bottom: 15px;
     font-size: 13px;
