renamed about page to features fixes issue #11

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
             </div>
             <div id="navigation">
                 <ul>
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="features.html">features</a></li>
                     <li><a href="download.html">download</a></li>
                     <li><a href="news.html">news</a></li>
                     <li><a href="https://github.com/appleseedhq/appleseed">github</a></li>
