added team page fixes issue #12, fixes issue #13

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
                     <li><a href="features.html">features</a></li>
                     <li><a href="download.html">download</a></li>
                     <li><a href="news.html">news</a></li>
+                    <li><a href="team.html">team</a></li>
                     <li><a href="https://github.com/appleseedhq/appleseed">github</a></li>
                 </ul>
             </div>
