changed github link.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
                     <li><a href="download.html">download</a></li>
                     <li><a href="news.html">news</a></li>
                     <li><a href="team.html">team</a></li>
-                    <li><a href="https://github.com/appleseedhq/appleseed">github</a></li>
+                    <li><a href="https://github.com/appleseedhq">github</a></li>
                 </ul>
             </div>
         </div>
