changed one-sentence description of appleseed.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
                 </div>
             </a>
             <div id="splash-message">
-                appleseed is a modern, physically-based production renderer developed by visual effects professionals. It is released as open source under the MIT license.
+                appleseed is a modern, physically-based production renderer developed by visual effects and rendering nutjobs. It is released as open source under the MIT license.
             </div>
         </div>
     </div>
