--- a/css/styles.css
+++ b/css/styles.css
@@ -143,25 +143,25 @@ hr {
 }
 
 #latest-news {
+    float: left;
+    width: 265px;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 1.3em;
 }
 
 #news-container {
-    width: 100%;
-}
-
-.news-title {
-    float: left;
-    width: 265px;
-    font-size: 1.1em;
-}
-
-.news-body {
     float: left;
     margin-left: 42px;
     width: 653px;
+}
+
+.news-title {
+    font-size: 1.1em;
+}
+
+.more-news {
+    margin-top: 25px;
 }
 
 .clear {
