--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
                 {{ post.content }}
             </div>
             {% endfor %}
-            <div class="more-news"><a href="news.html">More news</a></div>
+            <div class="more-news"><a href="news.html">More News</a></div>
         </div>
     </div>
     <script>
