added link to fetchaveryshortfilm.com.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,8 @@
                 <div class="footer" id="links">
                     <h4>Links</h4>
                     <ul>
-                        <li><a href="http://www.mayaseed.net">mayaseed.net</a></li>
+                        <li><a href="http://www.mayaseed.net/">mayaseed.net</a></li>
+                        <li><a href="http://www.fetchaveryshortfilm.com/">fetchaveryshortfilm.com</a></li>
                     </ul>
                 </div>
                 <div class="footer" id="copyright">
