changed contact address.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
                 <div class="footer" id="contact">
                     <h4>Contact</h4>
                     <ul>
-                        <li><a href="mailto:hello@appleseedhq.net">hello@appleseedhq.net</a></li>
+                        <li><a href="mailto:contact@appleseedhq.net">contact@appleseedhq.net</a></li>
                         <li><a href="https://groups.google.com/forum/#!forum/appleseed-dev">mailing list</a></li>
                     </ul>
                     <div id="social">
