added active page in menu, removed page titles fixes issue #10

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,10 @@ hr {
     color: #bbbbbb;
 }
 
+#navigation ul li a.active {
+    color: #bbbbbb;
+}
+
 #wrapper {
     width: 960px;
     margin: 0 auto;
