--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,11 @@
             </div>
             <div id="navigation">
                 <ul>
-                    <li><a href="features.html">features</a></li>
-                    <li><a href="download.html">download</a></li>
-                    <li><a href="news.html">news</a></li>
-                    <li><a href="team.html">team</a></li>
+                    {% assign current = page.url | downcase | split: '/' %}
+                    <li><a href="features.html" {% if current[1] == 'features.html' %}class="active"{% endif %}>features</a></li>
+                    <li><a href="download.html" {% if current[1] == 'download.html' %}class="active"{% endif %}>download</a></li>
+                    <li><a href="news.html" {% if current[1] == 'news.html' %}class="active"{% endif %}>news</a></li>
+                    <li><a href="team.html" {% if current[1] == 'team.html' %}class="active"{% endif %}>team</a></li>
                     <li><a href="https://github.com/appleseedhq">github</a></li>
                 </ul>
             </div>
