added hover color on download button fixes issue #17

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,10 @@ hr {
     cursor: pointer;
 }
 
+#download-button:hover {
+    color: #bbbbbb;
+}
+
 #download-cta {
     text-transform: uppercase;
     font-weight: bold;
