--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="footer" id="copyright">
                     <h4>Copyright</h4>
-                    appleseed is released under the permissive <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>.
+                    appleseed is released under the permissive <a href="http://en.wikipedia.org/wiki/MIT_License">MIT&nbsp;license</a>.
                 </div>
             </div>
         </div>
