--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,10 @@ article {
 
 hr {
     margin-bottom: 30px;
-    border: 0;
+    color: #888888;
+    background-color: #888888;
+    border: none;
     height: 1px;
-    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(255,255,255,0.35), rgba(0,0,0,0));
-    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(255,255,255,0.35), rgba(0,0,0,0));
-    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(255,255,255,0.35), rgba(0,0,0,0));
-    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(255,255,255,0.35), rgba(0,0,0,0));
 }
 
 .post-date {
