added 0 margin-top for title tags fixes issue #20

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,14 +20,17 @@ a:hover {
 }
 
 h1 {
+    margin-top: 0px;
     font-size: 25px;
 }
 
 h2 {
+    margin-top: 0px;
     font-size: 21px;
 }
 
 h3 {
+    margin-top: 0px;
     font-size: 17px;
 }
 
