--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -1,7 +1,7 @@
 {% include header.html %}
     {% for post in site.posts %}
     <article>
-        <h2>{{ post.title }}</h2>
+        <h2><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
         <div class="post-date">{{ post.date | date: "%B %-d, %Y" }}</div>
         {{ post.content }}
     </article>
