fixed issue #30: Links in the footer are not highlighted on hover.

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,10 @@ iframe {
     color: #666666;
 }
 
+.footer a:hover {
+    color: #bbbbbb;
+}
+
 .footer h4 {
     margin-bottom: 11px;
     text-transform: uppercase;
