tweaked More News link.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@
                 {{ post.content }}
             </div>
             {% endfor %}
-            <div class="more-news"><a href="news.html">More News</a></div>
+            <div class="more-news"><a href="news.html">More News...</a></div>
         </div>
     </div>
     <script>
