added slick carousel fixes issue #28

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,5 +29,13 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script type="text/javascript" src="js/slick.min.js"></script>
+        <script>
+        $(document).ready(function(){
+            $('.carousel').slick();
+        });
+        </script>
     </body>
 </html>
