--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,9 @@
         </div>
     </div>
 
-    <div id="video-carousel">
-        <iframe src="//player.vimeo.com/video/66799467" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <div class="carousel">
+      <div><iframe src="//player.vimeo.com/video/66799467" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+      <div><iframe src="//player.vimeo.com/video/81199785" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
     </div>
 
     <div id="news">
