--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
         <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.baseurl }}css/styles.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}css/slick.css"/>
     </head>
     <body>
         <div id="header">
