--- a/css/styles.css
+++ b/css/styles.css
@@ -214,27 +214,27 @@ iframe {
     width: 660px;
 }
 
-.footer,
-.footer a {
+#footer,
+#footer a {
     color: #666666;
 }
 
-.footer a:hover {
+#footer a:hover {
     color: #bbbbbb;
 }
 
-.footer h4 {
+#footer h4 {
     margin-bottom: 11px;
     text-transform: uppercase;
 }
 
-.footer ul {
+#footer ul {
     padding: 0;
     margin: 0;
     list-style-type: none;
 }
 
-.footer ul li {
+#footer ul li {
     margin-bottom: 5px;
 }
 
