--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,10 +16,10 @@
             <div id="navigation">
                 <ul>
                     {% assign current = page.url | downcase | split: '/' %}
-                    <li><a href="features.html" {% if current[1] == 'features.html' %}class="active"{% endif %}>features</a></li>
-                    <li><a href="download.html" {% if current[1] == 'download.html' %}class="active"{% endif %}>download</a></li>
-                    <li><a href="news.html" {% if current[1] == 'news.html' %}class="active"{% endif %}>news</a></li>
-                    <li><a href="team.html" {% if current[1] == 'team.html' %}class="active"{% endif %}>team</a></li>
+                    <li><a href="/features.html" {% if current[1] == 'features.html' %}class="active"{% endif %}>features</a></li>
+                    <li><a href="/download.html" {% if current[1] == 'download.html' %}class="active"{% endif %}>download</a></li>
+                    <li><a href="/news.html" {% if current[1] == 'news.html' %}class="active"{% endif %}>news</a></li>
+                    <li><a href="/team.html" {% if current[1] == 'team.html' %}class="active"{% endif %}>team</a></li>
                     <li><a href="https://github.com/appleseedhq">github</a></li>
                 </ul>
             </div>
