added post title and date when in a single post fixes issue #29

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,7 @@
 {% include header.html %}
-
+    <article>
+        <h2>{{ page.title }}</h2>
+        <div class="post-date">{{ page.date | date: "%B %-d, %Y" }}</div>
+        {{ content }}
+    </article>
 {% include footer.html %}
