--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,14 +36,14 @@
         var link, target = '';
 
         if (navigator.appVersion.indexOf("Win") != -1) {
-            link = 'https://drive.google.com/file/d/0B5JRj3LWTYIRcW5mTlF4QUZRMm8/edit';
-            target = 'for Windows';
+            link = 'https://github.com/appleseedhq/appleseed/releases/download/1.1.0-alpha-21/appleseed-1.1.0-alpha-21-0-g5c5df0b-win64-vs110.zip';
+            target = 'for 64-bit Windows';
         } else if (navigator.appVersion.indexOf("Mac") != -1) {
-            link = 'https://drive.google.com/file/d/0B5JRj3LWTYIRTmlaaU5heXBLSjA/edit';
-            target = 'for MacOS 10.9 +';
+            link = 'https://github.com/appleseedhq/appleseed/releases/download/1.1.0-alpha-21/appleseed-1.1.0-alpha-21-0-g5c5df0b-mac64-llvm.zip';
+            target = 'for 64-bit MacOS 10.9+';
         } else if (navigator.appVersion.indexOf("X11") != -1 || navigator.appVersion.indexOf("Linux") != -1) {
-            link = 'https://drive.google.com/file/d/0B5JRj3LWTYIRZkJoRHh4NzlCbFE/edit';
-            target = 'for Linux';
+            link = 'https://github.com/appleseedhq/appleseed/releases/download/1.1.0-alpha-21/appleseed-1.1.0-alpha-21-0-g5c5df0b-linux64-gcc4.zip';
+            target = 'for 64-bit Linux';
         }
 
         document.getElementById('download-link').href = link;
