added screenshot to front page carousel.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,8 +14,17 @@
     </div>
 
     <div class="carousel">
-      <div><iframe src="//player.vimeo.com/video/66799467" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-      <div><iframe src="//player.vimeo.com/video/81199785" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+      <div>
+        <a href="https://cloud.githubusercontent.com/assets/321290/2713456/16f83e26-c4e7-11e3-8f3d-d136cad3379e.png">
+          <img src="https://cloud.githubusercontent.com/assets/321290/2713456/16f83e26-c4e7-11e3-8f3d-d136cad3379e.png" width="960" height="540" />
+        </a>
+      </div>
+      <div>
+        <iframe src="//player.vimeo.com/video/66799467" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <div>
+        <iframe src="//player.vimeo.com/video/81199785" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
     </div>
 
     <div id="news">
