tweaked one-line description of appleseed.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
                 </div>
             </a>
             <div id="splash-message">
-                appleseed is a modern, physically-based renderer designed for production rendering. It is released as open source under the MIT license.
+                appleseed is a modern, physically-based renderer designed for production rendering. It is released as open source under the MIT&nbsp;license.
             </div>
         </div>
     </div>
