--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,23 +34,23 @@
             <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
             <script type="text/javascript" src="js/slick.min.js"></script>
             <script>
-            $(document).ready(function(){
-                $('.carousel').slick({
-                    dots: true,
-                    touchMove: true
+                $(document).ready(function() {
+                    $('.carousel').slick({
+                        arrows: false,
+                        autoplay: true,
+                        dots: true
+                    });
                 });
-            });
             </script>
         {% endif %}
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-11430889-2', 'appleseedhq.github.io');
-          ga('send', 'pageview');
-
+            ga('create', 'UA-11430889-2', 'appleseedhq.github.io');
+            ga('send', 'pageview');
         </script>
     </body>
 </html>
