--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,9 @@
     <body>
         <div id="header">
             <div id="logo">
-                <a href="/"><img src="/img/appleseed-logo.png" alt="appleseed logo"></a>
+                <a href="/">
+                    <img src="/img/appleseed-logo.png" alt="appleseed logo" />
+                </a>
             </div>
             <div id="navigation">
                 <ul>
