adjusted carousel autoplay speed.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,7 @@
                     $('.carousel').slick({
                         arrows: false,
                         autoplay: true,
+                        autoplaySpeed: 6000,
                         dots: true
                     });
                 });
