--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
                 $(document).ready(function() {
                     $('.carousel').slick({
                         arrows: false,
-                        autoplay: true,
+                        autoplay: false,
                         autoplaySpeed: 6000,
                         dots: true
                     });
