fixed page titles.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{{ page.title }}</title>
+        <title>appleseed{{% | {{ page.title }}</title>
         <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.baseurl }}css/slick.css"/>
