fixed link in one-line description.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@
             </div>
             <div id="splash-message">
                 appleseed is a modern, physically-based renderer designed for production rendering. It is released as open source under the MIT&nbsp;license.
-                <a href="features.html">More&hellip;</a>
+                <a href="/about.html">More&hellip;</a>
             </div>
         </div>
     </div>
