--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -2,8 +2,8 @@
     {% for post in site.posts %}
     <article>
         <h2><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
-        <div class="post-date">{{ post.date | date: "%B %-d, %Y" }}</div>
-        {{ post.content }}
+        <div class="date">{{ post.date | date: "%B %-d, %Y" }}</div>
+        <div class="body">{{ post.content }}</div>
     </article>
     <hr>
     {% endfor %}
