added ajax-loader.gif required by slick carousel.

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,10 @@ article .date {
     line-height: 1.8em;
 }
 
+.slick-loading .slick-list {
+    background-image: url(/img/ajax-loader.gif)
+}
+
 .slick-slider {
     margin-bottom: 55px;
 }
