fixed More News link.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@
                 <div class="body">{{ post.content }}</div>
             </article>
             {% endfor %}
-            <div class="more-news"><a href="news.html">More News&hellip;</a></div>
+            <div class="more-news"><a href="/news.html">More News&hellip;</a></div>
         </div>
     </div>
 
